# server/api/v1/sys_apis.go
@@ -6,7 +6,7 @@ import (
 	"server/utils"
 	"server/model"
 	"server/model/response"
-
+	"server/model/request"
 	"server/global"
 	services "server/service"
 )
@@ -31,5 +31,71 @@ func CreateApi(c *gin.Context){
 		response.FailWithMessage("创建失败",c)
 	} else {
 		response.OkWithMessage("创建成功",c)
+	}
+}
+
+// @Tags SysApi
+// @Summary  删除api
+// @Security ApiKeyAuth
+// @accept application/json
+// @Produce application/json
+// @Param data body model.SysApi true "ID"
+// @Success 200 {string} string "{"success":true,"data":{},"msg":"删除成功"}"
+// @Router /api/deleteApi [post]
+func DeleteApi(c *gin.Context){
+	var api model.SysApi
+	_ = c.ShouldBindJSON(&api)
+	if err := utils.Verify(api, utils.ApiVerify); err != nil {
+		response.FailWithMessage(err.Error(), c)
+		return
+	}
+	if err := services.DeleteApi(api); err != nil {
+		global.GVA_LOG.Error("删除失败!", zap.Any("err", err))
+		response.FailWithMessage("删除失败", c)
+	} else {
+		response.OkWithMessage("删除成功", c)
+	}
+}
+
+// @Tags SysApi
+// @Summary  分页获取api
+// @Security ApiKeyAuth
+// @accept application/json
+// @Produce application/json
+// @Param data body request.SearchApiParams true "分页获取api列表"
+// @Success 200 {string} string "{"success":true,"data":{},"msg":"删除成功"}"
+// @Router /api/GetApiList [post]
+func GetApiList(c *gin.Context){
+	var pageInfo request.SearchApiParams
+	_ = c.ShouldBindJSON(&pageInfo)
+	if err := utils.Verify(pageInfo.PageInfo, utils.PageInfoVerify); err != nil {
+		response.FailWithMessage(err.Error(), c)
+		return
+	}
+	if err, list, total := services.GetAPIInfoList(pageInfo.SysApi, pageInfo.PageInfo, pageInfo.OrderKey, pageInfo.Desc); err != nil {
+		global.GVA_LOG.Error("删除失败!", zap.Any("err", err))
+		response.FailWithMessage("删除失败", c)
+	} else {
+		response.OkWithDetailed(response.PageResult{
+				List: list,
+				Total: total,
+				Page: pageInfo.Page,
+				PageSize: pageInfo.PageSize,
+			}, "获取成功",c)
+	}
+}
+// @Tags SysApi
+// @Summary 获取所有的Api 不分页
+// @Security ApiKeyAuth
+// @accept application/json
+// @Produce application/json
+// @Success 200 {string} string "{"success":true,"data":{},"msg":"获取成功"}"
+// @Router /api/getAllApis [post]
+func GetAllApis(c *gin.Context){
+	if err, apis := services.GetAllApis(); err != nil {
+		global.GVA_LOG.Error("获取失败!", zap.Any("err", err))
+		response.FailWithMessage("获取失败", c)
+	} else {
+		response.OkWithDetailed(response.SysAPIListResponse{Apis: apis}, "获取成功", c)
 	}
 }
