# server/router/sys_api.go
@@ -9,5 +9,7 @@ func InitApiRouter(Router *gin.RouterGroup){
 	ApiRouter := Router.Group("api")
 	{
 		ApiRouter.POST("createApi", v1.CreateApi)   //创建api
+		ApiRouter.POST("deleteApi", v1.DeleteApi)   //删除api
+		ApiRouter.POST("getAllApis", v1.GetAllApis)   //获取所有api不分页
 	}
 }
